--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header h2 {
   display: flex;
   justify-content: flex-start;
   width: 40%;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 #zoneRecherche i {
@@ -170,4 +170,15 @@ input:nth-child(3):focus {
   color: #0065fc;
   border-radius: 20px;
   background-color: #deebff;
+}
+
+#informations i {
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  color: #0065fc;
+  border: 1px solid #d9d9d9;
+  border-radius: 12.5px;
+  text-align: center;
+  margin-right: 10px;
 }
