--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 #blocPage {
-  width: 1440px;
+  width: 1335px;
   margin: auto;
   margin-top: 20px;
 }
@@ -181,4 +181,63 @@ input:nth-child(3):focus {
   border-radius: 12.5px;
   text-align: center;
   margin-right: 10px;
+}
+
+#hebergements {
+  display: flex;
+  justify-content: space-between;
+}
+
+#hebergements h1 {
+  padding-left: 40px;
+  padding-top: 30px;
+  font-family: "Raleway-semibold";
+  font-size: 20px;
+}
+#hebergementsMarseille {
+  width: 880px;
+  height: 625px;
+  background: #f2f2f2;
+  border-radius: 20px;
+}
+
+#populaires {
+  width: 420px;
+  height: 625px;
+  background: #f2f2f2;
+  border-radius: 20px;
+}
+
+#cCd {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 40px;
+}
+
+#cannebiere {
+  border: 5px solid white;
+  width: 235px;
+  height: 115px;
+  border-radius: 20px 20px 0px 0px;
+  background: url("media/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg")
+    no-repeat;
+  box-shadow: 0px 4px 4px grey;
+}
+
+#cannebiereDesc {
+  border: 5px solid white;
+  box-shadow: 0px 4px 4px grey;
+  border-radius: 0px 0px 20px 20px;
+  width: 235px;
+  height: 60px;
+  background-color: white;
+  color: black;
+}
+#cannebiereDesc ul {
+  font-family: "Raleway-semibold";
+  list-style: none;
+  padding-left: 10px;
+  font-size: 14px;
+  margin: 0;
 }
