--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@
   font-family: "Raleway-thin";
   src: url("media/fonts/static/Raleway-ExtraLight.ttf");
 }
-
+@font-face {
+  font-family: "Raleway-light";
+  src: url("media/fonts/static/Raleway-Light.ttf");
+}
 @media screen and (max-width: 900px) {
 }
 
@@ -157,6 +160,7 @@ input:nth-child(3):focus {
   border-top: 2px #deebff solid;
   border-right: 2px #deebff solid;
   border-bottom: 2px #deebff solid;
+  box-shadow: 1px 1px 7px grey;
 }
 
 #filtres i {
@@ -170,6 +174,11 @@ input:nth-child(3):focus {
   color: #0065fc;
   border-radius: 20px;
   background-color: #deebff;
+}
+
+#informations {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 #informations i {
@@ -191,6 +200,7 @@ input:nth-child(3):focus {
 #hebergements h1 {
   padding-left: 40px;
   padding-top: 30px;
+  padding-bottom: 20px;
   font-family: "Raleway-semibold";
   font-size: 20px;
 }
@@ -208,36 +218,149 @@ input:nth-child(3):focus {
   border-radius: 20px;
 }
 
-#cCd {
+#hebGeneral {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: flex-start;
+}
+#hebGeneral button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-align: left;
+  cursor: pointer;
+}
+
+.hebCont {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 40px;
+  padding-left: 35px;
+  padding-bottom: 35px;
 }
 
-#cannebiere {
+.hebPhoto {
   border: 5px solid white;
+  border-bottom: 0;
   width: 235px;
-  height: 115px;
+  height: 110px;
   border-radius: 20px 20px 0px 0px;
-  background: url("media/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg")
-    no-repeat;
-  box-shadow: 0px 4px 4px grey;
+  box-shadow: 0px -5px 10px #d9d9d9;
 }
 
-#cannebiereDesc {
+.hebDesc {
   border: 5px solid white;
-  box-shadow: 0px 4px 4px grey;
+  box-shadow: 0px 5px 10px #d9d9d9;
   border-radius: 0px 0px 20px 20px;
   width: 235px;
-  height: 60px;
+  height: 65px;
   background-color: white;
   color: black;
 }
-#cannebiereDesc ul {
+
+button:hover .hebPhoto {
+  /* border: 5px solid #0065fc;
+  border-bottom: 0;*/
+  box-shadow: 0px -5px 10px grey;
+}
+button:hover .hebDesc {
+  /*border: 5px solid #0065fc;
+  background-color: #0065fc;
+  color: white;*/
+  box-shadow: 0px 5px 10px grey;
+}
+
+.hebDesc p {
   font-family: "Raleway-semibold";
   list-style: none;
   padding-left: 10px;
   font-size: 14px;
   margin: 0;
+}
+#canPhoto {
+  background: url("media/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+
+#hpPhoto {
+  background: url("media/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+#hmPhoto {
+  background: url("media/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+#hmePhoto {
+  background: url("media/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+#panPhoto {
+  background: url("media/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+
+#haPhoto {
+  background: url("media/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg")
+    no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+
+.notesEtoiles {
+  padding-left: 10px;
+}
+.hebCont p:nth-child(1) {
+  font-family: "Raleway-bold";
+  font-size: 16px;
+  padding-bottom: 4px;
+}
+
+.hebCont p:nth-child(2) {
+  font-family: "Raleway-light";
+  font-size: 14px;
+  padding-bottom: 2px;
+}
+
+.hebCont strong {
+  font-family: "Raleway-semibold";
+}
+
+#hebCan i:nth-child(1),
+#hebCan i:nth-child(2),
+#hebCan i:nth-child(3),
+#hebCan i:nth-child(4),
+#hebHm i:nth-child(1),
+#hebHm i:nth-child(2),
+#hebHm i:nth-child(3),
+#hebHm i:nth-child(4),
+#hebPan i:nth-child(1),
+#hebPan i:nth-child(2),
+#hebPan i:nth-child(3),
+#hebPan i:nth-child(4),
+#hebHme i:nth-child(1),
+#hebHme i:nth-child(2),
+#hebHme i:nth-child(3) {
+  color: #0065fc;
+}
+#hebCan i:nth-child(5),
+#hebHm i:nth-child(5),
+#hebPan i:nth-child(5),
+#hebHme i:nth-child(4),
+#hebHme i:nth-child(5) {
+  color: #d9d9d9;
+}
+
+#hebHp i,
+#hebHa i {
+  color: #0065fc;
 }
