--- a/style.css
+++ b/style.css
@@ -25,42 +25,61 @@ body {
   font-family: "Raleway";
 }
 
+body {
+  font-family: "Raleway", Arial, Helvetica, sans-serif;
+  width: 76%;
+  margin: auto;
+}
+
 #blocPage {
-  width: 1335px;
+  width: 92%;
   margin: auto;
   margin-top: 20px;
 }
 
 #logoNav {
+  width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  padding-bottom: 25px;
+  margin-bottom: 30px;
 }
-
+nav {
+  order: 2;
+  width: 90%;
+}
 nav ul {
   list-style: none;
   display: flex;
+  justify-content: flex-end;
 }
 nav li {
   font-size: 16px;
-  margin-right: 60px;
+  margin-right: 50px;
+}
+#inscription {
+  padding-right: 20px;
+  order: 3;
 }
 nav a {
   text-decoration: none;
   color: #0065fc;
 }
 
-nav a:hover {
+nav a {
   padding-top: 33px;
-  border-top: 1px solid;
+  border-top: 2px solid;
 }
 
 nav li:nth-child(2) a {
   color: inherit;
+  border: 0;
 }
 
-nav li:nth-child(3) a {
+#inscription a {
   font-family: "Raleway-bold";
+  text-decoration: none;
+  color: #0065fc;
 }
 
 header h1 {
@@ -76,63 +95,76 @@ header h2 {
 #zoneRecherche {
   display: flex;
   justify-content: flex-start;
-  width: 40%;
-  padding-bottom: 20px;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-#zoneRecherche i {
+input::placeholder {
+  opacity: 1;
+  color: black;
+}
+
+#mapMarker {
   background-color: #f2f2f2;
-  width: 15px;
-  padding: 15px;
-  text-align: center;
-  border: 1px #f2f2f2 solid;
+  width: 50px;
+  height: 50px;
   border-radius: 15px 0px 0px 15px;
-  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #zoneRecherche input:nth-child(2) {
   width: 250px;
-  padding-left: 3%;
+  padding-left: 20px;
+  height: 50px;
   font-family: "Raleway-bold";
   border-top: 1px #f2f2f2 solid;
   border-bottom: 1px #f2f2f2 solid;
   border-left: 1px #f2f2f2 solid;
-  border-right: 0px;
+  border-right: 0;
   font-size: 16px;
 }
 
-#zoneRecherche input:nth-child(3) {
+#zoneRecherche button {
   width: 135px;
+  height: 50px;
   background-color: #0065fc;
   color: white;
   font-family: "Raleway-bold";
   font-size: 16px;
-  border: 1px #f2f2f2 solid;
+  border: 2px #0065fc solid;
   border-radius: 0px 15px 15px 0px;
   cursor: pointer;
 }
 
-#zoneRecherche input:nth-child(3):hover {
-  background-color: #deebff;
-  color: #0065fc;
+#zoneRecherche button:hover {
+  background: #004bbd;
+  border: 2px solid #004bbd;
+  color: #f1f1f1;
+}
+
+#zoneRecherche span:last-child {
+  display: none;
 }
 
 #zoneRecherche input:nth-child(2):focus,
-input:nth-child(3):focus {
+button:focus {
   outline: none;
 }
 
 #filtres {
   display: flex;
-  justify-content: space-between;
-
+  justify-content: flex-start;
   font-family: "Raleway-bold";
-  width: 70%;
 }
 
 #iFilters {
-  width: 90%;
+  margin-left: 25px;
+  width: 65%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
@@ -143,14 +175,14 @@ input:nth-child(3):focus {
 
 #filtres a {
   display: flex;
-  height: 36px;
+  height: 46px;
   align-items: center;
   text-decoration: none;
   color: black;
   border-top: 2px #d9d9d9 solid;
   border-right: 2px #d9d9d9 solid;
   border-bottom: 2px #d9d9d9 solid;
-  border-radius: 20px;
+  border-radius: 25px;
   padding-right: 20px;
 }
 
@@ -168,11 +200,11 @@ input:nth-child(3):focus {
   justify-content: center;
   align-items: center;
   margin-right: 10px;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   text-align: center;
   color: #0065fc;
-  border-radius: 20px;
+  border-radius: 25px;
   background-color: #deebff;
 }
 
@@ -205,15 +237,14 @@ input:nth-child(3):focus {
   font-size: 20px;
 }
 #hebergementsMarseille {
-  width: 880px;
-  height: 625px;
+  width: 66%;
   background: #f2f2f2;
   border-radius: 20px;
+  padding-bottom: 40px;
 }
 
 #populaires {
-  width: 420px;
-  height: 625px;
+  width: 31%;
   background: #f2f2f2;
   border-radius: 20px;
 }
@@ -434,3 +465,515 @@ input:nth-child(3):focus {
   background-size: cover;
   background-position: 50%;
 }
+
+#popSolm i,
+#popAcdl i,
+#popHbb i {
+  color: #0065fc;
+}
+
+#popAcdl i:last-child,
+#popHbb i:last-child {
+  color: #d9d9d9;
+}
+
+#activites {
+  margin-top: 60px;
+  /*height: 100%;*/
+}
+
+#activites h1 {
+  font-family: "Raleway-semibold";
+  font-size: 20px;
+}
+
+#actGeneral {
+  /*height: 50%;*/
+  display: flex;
+  justify-content: space-between;
+}
+
+#activitesP1,
+#activitesP2 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: space-between;
+  row-gap: 41px;
+  height: 445px;
+  width: 48.5%;
+}
+
+.actCont {
+  height: 200px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px #d9d9d9;
+  cursor: pointer;
+}
+.actCont:hover {
+  transition: all 0.4s ease-out;
+  box-shadow: 0px 0px 20px grey;
+  cursor: pointer;
+}
+.actCont:first-child {
+  width: 300px;
+  height: 100%;
+}
+
+.actCont:nth-child(2) {
+  width: 300px;
+  height: 235px;
+}
+
+.actCont:nth-child(3) {
+  width: 300px;
+  height: 165px;
+}
+
+.actCont:first-child .actPhoto {
+  height: 390px;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.actCont:nth-child(2) .actPhoto {
+  height: 180px;
+  border-radius: 20px 20px 0px 0px;
+}
+.actCont:last-child .actPhoto {
+  height: 115px;
+  border-radius: 20px 20px 0px 0px;
+}
+.actPhoto {
+  border-radius: 20px 20px 0px 0px;
+}
+
+.actDesc {
+  font-family: "Raleway-bold";
+  margin-left: 20px;
+}
+
+#vpPhoto {
+  background: url("media/images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg")
+    no-repeat;
+  background-size: 600px;
+  background-position: center;
+}
+
+#fpPhoto {
+  background: url("media/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg")
+    no-repeat;
+  background-size: 300px;
+  background-position: center;
+}
+
+#ifPhoto {
+  background: url("media/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg")
+    no-repeat;
+  background-size: 400px;
+  background-position: center;
+}
+
+#pncPhoto {
+  background: url("media/images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg")
+    no-repeat;
+  background-size: 600px;
+  background-position: center;
+}
+
+#ndPhoto {
+  background: url("media/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg")
+    no-repeat;
+  background-size: 500px;
+  background-position: 60% 20%;
+}
+
+#plPhoto {
+  background: url("media/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg")
+    no-repeat;
+  background-size: 300px;
+  background-position: 50% 40%;
+}
+
+footer {
+  display: flex;
+  justify-content: flex-start;
+  row-gap: 90px;
+  margin-top: 50px;
+  height: 220px;
+  background: #f2f2f2;
+}
+
+footer h1 {
+  font-family: "Raleway-semibold";
+  font-size: 16px;
+}
+
+footer a {
+  font-family: "Raleway-light";
+  text-decoration: none;
+  color: black;
+  line-height: 30px;
+}
+
+#aPropos {
+  margin-left: 50px;
+}
+
+#aPropos,
+#nosHebergements,
+#assistance {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+}
+
+@media only screen and (min-width: 321px) and (max-width: 799px) {
+  body {
+    padding: 0;
+    margin: 0;
+    width: auto;
+  }
+  #blocPage {
+    margin: 0;
+    width: auto;
+  }
+  #logoNav {
+    width: auto;
+    flex-wrap: wrap;
+  }
+  #logoNav img {
+    margin-left: 20px;
+  }
+  #inscription {
+    order: 2;
+    padding: 0;
+    padding-right: 10px;
+  }
+  nav {
+    order: 3;
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  nav ul {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    justify-content: space-between;
+  }
+  nav li {
+    text-align: center;
+    margin: 0;
+    width: 50%;
+  }
+  nav a {
+    border: 0;
+  }
+
+  nav li:first-child {
+    padding-bottom: 15px;
+    border-bottom: 2.5px solid #0065fc;
+  }
+
+  nav li:last-child {
+    padding-bottom: 15px;
+    border-bottom: 2.5px solid #f2f2f2;
+  }
+
+  header h1,
+  h2,
+  h3 {
+    margin-left: 20px;
+  }
+  header h1 {
+    width: 80%;
+  }
+  #zoneRecherche {
+    margin: 0;
+    padding: 0;
+    width: auto;
+    margin-left: 20px;
+  }
+  #zoneRecherche input:nth-child(2) {
+    width: 65%;
+    margin-right: -15px;
+  }
+
+  #zoneRecherche button {
+    width: 50px;
+    border-radius: 15px;
+  }
+  #zoneRecherche span:first-child {
+    display: none;
+  }
+  #zoneRecherche span:last-child {
+    display: block;
+  }
+
+  #filtres {
+    flex-direction: column;
+  }
+
+  #iFilters {
+    row-gap: 10px;
+    width: 90%;
+    flex-direction: row;
+  }
+
+  #informations {
+    margin-left: 20px;
+    width: auto;
+  }
+
+  #informations p {
+    display: flex;
+  }
+
+  #informations span {
+    width: 90%;
+  }
+
+  #hebergements {
+    flex-direction: column-reverse;
+  }
+
+  #hebergementsMarseille {
+    width: auto;
+    border-radius: 0;
+
+    background: white;
+  }
+
+  .hebCont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+  }
+
+  .hebPhoto {
+    width: 100%;
+  }
+  .hebDesc {
+    width: 100%;
+  }
+  #populaires {
+    width: auto;
+    border-radius: 0;
+  }
+  #activites {
+    border: 1px solid red;
+  }
+  #actGeneral {
+    flex-direction: column;
+  }
+
+  #activitesP1,
+  #activitesP2 {
+    width: 100%;
+    height: auto;
+    border: 1px dashed blue;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+
+  .actCont:first-child {
+    width: 80%;
+  }
+  .actCont:nth-child(2) {
+    width: 300px;
+    height: 235px;
+  }
+
+  .actCont:nth-child(3) {
+    width: 300px;
+    height: 165px;
+  }
+  footer {
+    margin: 0;
+    padding: 0;
+    border: 1px dashed blue;
+    width: auto;
+    flex-direction: column;
+    height: auto;
+  }
+  #aPropos,
+  #nosHebergements,
+  #assistance {
+    margin: 0;
+    padding: 0;
+    width: auto;
+  }
+}
+/**************************************Media queries****************************************/
+
+/*@media screen and (max-width: 800px) {
+  #blocComplet {
+    width: auto;
+  }
+  #blocPage {
+    width: auto;
+  }
+  #logoNav {
+    width: auto;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  #filtres,
+  #iFilters {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: auto;
+  }
+  #hebergements {
+    flex-direction: column-reverse;
+  }
+  #hebergementsMarseille {
+    width: auto;
+    height: auto;
+    flex-direction: column;
+  }
+  #actGeneral {
+    flex-direction: column;
+  }
+}*/
+
+/*@media all and (max-device-width: 480px) {
+  body {
+    width: auto;
+  }
+  #blocComplet {
+    border: 1px solid black;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
+  #blocPage {
+    border: 1px dashed red;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
+
+  nav li,
+  nav ul,
+  nav a {
+    width: auto;
+    font-size: 2.3vh;
+  }
+  nav {
+    display: none;
+  }
+  header img {
+    width: 15vh;
+  }
+  header h1 {
+    margin-left: 5%;
+    text-align: left;
+    font-size: 3vh;
+  }
+  header h2 {
+    margin-left: 5%;
+    font-size: 1.5vw;
+  }
+
+  #zoneRecherche {
+    width: 100%;
+    margin-left: 5%;
+    font-size: 3vw;
+    height: 6vh;
+  }
+
+  #zoneRecherche i {
+    font-size: 4vw;
+    width: 8vw;
+  }
+
+  #zoneRecherche input:nth-child(2) {
+    font-size: 4vw;
+    width: 60vw;
+  }
+  #zoneRecherche input:nth-child(3) {
+    border-radius: 20px;
+    font-size: 4vw;
+    width: 15vw;
+    color: #0065fc;
+  }
+
+  #populaires {
+    width: 100%;
+  }
+
+  .popCont {
+    width: 90%;
+    height: 5em;
+  }
+
+  .popPhoto {
+    width: 30%;
+    height: 5em;
+  }
+
+  .popDesc {
+    width: 70%;
+  }
+
+  #filtres,
+  #iFilters {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: auto;
+  }
+  #hebergements {
+    flex-direction: column-reverse;
+  }
+  #hebergementsMarseille {
+    width: auto;
+    height: auto;
+    flex-direction: column;
+  }
+  #actGeneral {
+    width: auto;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  #activitesP1,
+  #activitesP2 {
+    width: auto;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+}
+/*
+@media screen and (max-width: 1100px) {
+  #blocComplet {
+    width: auto;
+  }
+  #blocPage {
+    width: 100%;
+  }
+  #filtres,
+  #iFilters {
+    justify-content: flex-start;
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 1335px) {
+  #blocComplet {
+    width: auto;
+  }
+  #blocPage {
+    width: auto;
+  }
+}
+*/
